--- a/UnitsConverter/App.xaml
+++ b/UnitsConverter/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="UnitsConverter.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UnitsConverter">
+             xmlns:local="clr-namespace:UnitsConverter"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
-
+         
     </Application.Resources>
 </Application>
