--- a/Konwerter/Konwerter/MainWindow.xaml
+++ b/Konwerter/Konwerter/MainWindow.xaml
@@ -16,13 +16,12 @@
         <Label Content="NA:" HorizontalAlignment="Left" Margin="59,141,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.54,0.557"/>
         <Button x:Name="KonwertujButton" Content="Konwertuj" HorizontalAlignment="Left" Margin="93,246,0,0" VerticalAlignment="Top" Width="75" Click="KonwertujButton_Click"/>
         <DataGrid x:Name="StatystykiDataGrid" HorizontalAlignment="Left" Height="189" Margin="224,100,0,0" VerticalAlignment="Top" Width="560"/>
-        <Button Content="Wyświetl statystyki" HorizontalAlignment="Left" Margin="93,270,0,0" VerticalAlignment="Top" Width="126" Click="Button_Click"/>
+        <Button Content="Wyświetl statystyki z SQL" HorizontalAlignment="Left" Margin="79,333,0,0" VerticalAlignment="Top" Width="140" Click="Button_Click" IsEnabled="False"/>
         <Label Content="Konwerter jednostek" HorizontalAlignment="Left" Margin="266,0,0,0" VerticalAlignment="Top" FontSize="22"/>
         <Label Content="Kategoria:" HorizontalAlignment="Left" Margin="80,22,0,0" VerticalAlignment="Top"/>
         <Label Content="Wartość:" HorizontalAlignment="Left" Margin="32,174,0,0" VerticalAlignment="Top"/>
         <Label Content="Wynik:" HorizontalAlignment="Left" Margin="43,206,0,0" VerticalAlignment="Top"/>
-        <Button Content="Dodaj dane&#xD;&#xA;" HorizontalAlignment="Left" Margin="224,358,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Button Content="Wyswietl dane" HorizontalAlignment="Left" Margin="316,358,0,0" VerticalAlignment="Top" Width="97" Click="Button_Click_2"/>
+        <Button Content="Wyswietl statystyki" HorizontalAlignment="Left" Margin="93,274,0,0" VerticalAlignment="Top" Width="126" Click="Button_Click_2" RenderTransformOrigin="0.501,0.438"/>
 
     </Grid>
 </Window>
