--- a/applicationWpf_v2/applicationWpf/MainWindow.xaml
+++ b/applicationWpf_v2/applicationWpf/MainWindow.xaml
@@ -37,7 +37,7 @@
                 </TabItem>
                 <TabItem>
                     <TabItem.Header>
-                        <TextBlock Text="Temperature convert" Foreground="Brown" />
+                        <TextBlock Text="Unit converter" Foreground="Brown" />
                     </TabItem.Header>
                     <Grid>
                         <Grid.RowDefinitions>
@@ -49,113 +49,21 @@
                             <ColumnDefinition/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <Label Content="From..." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Row="0"/>
-                        <Label Content="...to" HorizontalAlignment="Left" Margin="152,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                        <TextBox x:Name="tempboxfrom" TextWrapping="Wrap" Text="0" Margin="77,0,10,30" Grid.Row="1"/>
-                        <TextBox x:Name="tempboxto" TextWrapping="Wrap" Text="0" Margin="10,0,77,30" Grid.Row="1" Grid.Column="1" IsReadOnly="True" IsEnabled="False" Background="#FFD6D6D6"/>
-                        <ListBox x:Name="templistfrom" Grid.Row="2" SelectedIndex="0">
-                            <ListBoxItem Content="Celsius"/>
-                            <ListBoxItem Content="Farenheit"/>
-                            <ListBoxItem Content="Kelvin"/>
-                            <ListBoxItem Content="Rankin"/>
-                        </ListBox>
-                        <ListBox x:Name="templistto" Grid.Row="2" Grid.Column="1" SelectedIndex="1">
-                            <ListBoxItem Content="Celsius"/>
-                            <ListBoxItem Content="Farenheit"/>
-                            <ListBoxItem Content="Kelvin"/>
-                            <ListBoxItem Content="Rankin"/>
-                        </ListBox>
-                        <Button x:Name="temperature" Content="Convert" HorizontalAlignment="Left" Margin="122,28,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="TemperatureUnitConvert"/>
-                    </Grid>
-                </TabItem>
-                <TabItem>
-                    <TabItem.Header>
-                        <TextBlock Text="Distance convert" Foreground="Brown" />
-                    </TabItem.Header>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition MaxHeight="50"/>
-                            <RowDefinition MaxHeight="50"/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="From..." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Row="0"/>
-                        <Label Content="...to" HorizontalAlignment="Left" Margin="152,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                        <TextBox x:Name="distboxfrom" TextWrapping="Wrap" Text="0" Margin="77,0,10,30" Grid.Row="1"/>
-                        <TextBox x:Name="distboxto" TextWrapping="Wrap" Text="0" Margin="10,0,77,30" Grid.Row="1" Grid.Column="1" IsReadOnly="True" IsEnabled="False" Background="#FFD6D6D6"/>
-                        <ListBox x:Name="distlistfrom" Grid.Row="2" SelectedIndex="0">
-                            <ListBoxItem Content="Milimeter"/>
-                            <ListBoxItem Content="Centimeter"/>
-                            <ListBoxItem Content="Decimeter"/>
-                            <ListBoxItem Content="Meter"/>
-                            <ListBoxItem Content="Kilometer"/>
-                            <ListBoxItem Content="Inch"/>
-                            <ListBoxItem Content="Feet"/>
-                            <ListBoxItem Content="Yard"/>
-                            <ListBoxItem Content="Mile"/>
-                            <ListBoxItem Content="Cable length"/>
-                            <ListBoxItem Content="Nautical mile"/>
-                        </ListBox>
-                        <Button x:Name="distance" Content="Convert" HorizontalAlignment="Left" Margin="122,28,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="DistanceUnitConvert"/>
-                        <ListBox x:Name="distlistto" SelectedIndex="1" Grid.Column="1" Grid.Row="2">
-                            <ListBoxItem Content="Milimeter"/>
-                            <ListBoxItem Content="Centimeter"/>
-                            <ListBoxItem Content="Decimeter"/>
-                            <ListBoxItem Content="Meter"/>
-                            <ListBoxItem Content="Kilometer"/>
-                            <ListBoxItem Content="Inch"/>
-                            <ListBoxItem Content="Feet"/>
-                            <ListBoxItem Content="Yard"/>
-                            <ListBoxItem Content="Mile"/>
-                            <ListBoxItem Content="Cable length"/>
-                            <ListBoxItem Content="Nautical mile"/>
-                        </ListBox>
-                    </Grid>
-                </TabItem>
-                <TabItem>
-                    <TabItem.Header>
-                        <TextBlock Text="Mass convert" Foreground="Brown" />
-                    </TabItem.Header>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition MaxHeight="50"/>
-                            <RowDefinition MaxHeight="50"/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Content="From..." HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Row="0"/>
-                        <Label Content="...to" HorizontalAlignment="Left" Margin="152,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                        <TextBox x:Name="massboxfrom" TextWrapping="Wrap" Text="0" Margin="77,0,10,30" Grid.Row="1"/>
-                        <TextBox x:Name="massboxto" TextWrapping="Wrap" Text="0" Margin="10,0,77,30" Grid.Row="1" Grid.Column="1" IsReadOnly="True" IsEnabled="False" Background="#FFD6D6D6"/>
-                        <ListBox x:Name="masslistfrom" Grid.Row="2" SelectedIndex="0">
-                            <ListBoxItem Content="Miligram"/>
-                            <ListBoxItem Content="Gram"/>
-                            <ListBoxItem Content="Decagram"/>
-                            <ListBoxItem Content="Kilogram"/>
-                            <ListBoxItem Content="Tonne"/>
-                            <ListBoxItem Content="Ounce"/>
-                            <ListBoxItem Content="Pound"/>
-                            <ListBoxItem Content="Carat"/>
-                            <ListBoxItem Content="Quintal"/>
-                        </ListBox>
-                        <Button x:Name="mass" Content="Convert" HorizontalAlignment="Left" Margin="122,28,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="MassUnitConvert"/>
-                        <ListBox x:Name="masslistto" SelectedIndex="1" Grid.Column="1" Grid.Row="2">
-                            <ListBoxItem Content="Miligram"/>
-                            <ListBoxItem Content="Gram"/>
-                            <ListBoxItem Content="Decagram"/>
-                            <ListBoxItem Content="Kilogram"/>
-                            <ListBoxItem Content="Tonne"/>
-                            <ListBoxItem Content="Ounce"/>
-                            <ListBoxItem Content="Pound"/>
-                            <ListBoxItem Content="Carat"/>
-                            <ListBoxItem Content="Quintal"/>
-                        </ListBox>
+                        <ComboBox x:Name="unitSelect" Grid.Row="0" SelectedIndex="0" Margin="0,0,0,25" SelectionChanged="unitSelect_SelectionChanged">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding converterName}"/>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+                        <Label Content="From..." HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+                        <Label Content="...to" HorizontalAlignment="Left" Margin="153,0,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1"/>
+                        <TextBox x:Name="tempboxfrom" TextWrapping="Wrap" Text="0" Margin="77,24,10,6" Grid.Row="1"/>
+                        <TextBox x:Name="tempboxto" TextWrapping="Wrap" Text="0" Margin="10,24,77,6" Grid.Row="1" Grid.Column="1" IsReadOnly="True" IsEnabled="False" Background="#FFD6D6D6"/>
+                        <ListBox x:Name="templistfrom" Grid.Row="2" SelectedIndex="0"/>
+                        <ListBox x:Name="templistto" Grid.Row="2" Grid.Column="1" SelectedIndex="1"/>
+                        <Button x:Name="temperature" Content="Convert" HorizontalAlignment="Left" Margin="5,25,0,0" VerticalAlignment="Top" Width="75" Click="ConvertUnit" Grid.Column="1"/>
+                        <Label Content="&lt;- select converter" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="5,-1,0,0"/>
                     </Grid>
                 </TabItem>
             </TabControl>
