--- a/Konwerter/Windows/MainWindow.xaml
+++ b/Konwerter/Windows/MainWindow.xaml
@@ -12,7 +12,13 @@
         <TextBox x:Name="FromTextBox" HorizontalAlignment="Left" Height="23" Margin="75,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBlock x:Name="ResultTextBlock" HorizontalAlignment="Left" Margin="75,198,0,0" TextWrapping="Wrap" Text="Wynik: " VerticalAlignment="Top" Height="24" Width="287"/>
         <Button Content="Przelicz" HorizontalAlignment="Left" Margin="580,126,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <ComboBox x:Name="CategoryComboBox" HorizontalAlignment="Left" Margin="242,41,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged"/>
+        <ComboBox x:Name="CategoryComboBox" HorizontalAlignment="Left" Margin="242,41,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Nazwa}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
         <Label Content="Kategoria jednostek:" HorizontalAlignment="Left" Margin="75,37,0,0" VerticalAlignment="Top"/>
         <Button x:Name="StatystykiButton" Content="Statystyki" HorizontalAlignment="Left" Margin="580,196,0,0" VerticalAlignment="Top" Width="75" Click="StatystykiButton_Click"/>
 
