--- a/UnitsConverter/App.xaml
+++ b/UnitsConverter/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="UnitsConverter.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UnitsConverter"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:UnitsConverter">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
