--- a/unit-converter/converter/MainWindow.xaml
+++ b/unit-converter/converter/MainWindow.xaml
@@ -9,11 +9,13 @@
         x:Name="Window"
         Title="Unit Converter" Height="450" Width="800">
     <Grid>
-        <ComboBox x:Name="UnitsTypeComboBox" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="UnitsTypeComboBox_SelectionChanged"/>
-        <ComboBox x:Name="FromUnitComboBox"  HorizontalAlignment="Left" Margin="10,51,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="FromUnitComboBox_SelectionChanged"/>
+        <ComboBox x:Name="UnitsTypeComboBox" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="UnitsTypeComboBox_SelectionChanged">
+            <ComboBox.ItemTemplate>                <DataTemplate>                    <TextBlock Text="{Binding Name}"/>                </DataTemplate>            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <ComboBox x:Name="FromUnitComboBox"  HorizontalAlignment="Left" Margin="10,51,0,0" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="Source" Text="{Binding Path=From, ElementName=Window}" HorizontalAlignment="Left" Height="23" Margin="135,51,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBlock  x:Name="Result" HorizontalAlignment="Left" Margin="506,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <ComboBox x:Name="ToUnitComboBox" HorizontalAlignment="Left" Margin="274,51,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ToUnitComboBox_SelectionChanged"/>
+        <ComboBox x:Name="ToUnitComboBox" HorizontalAlignment="Left" Margin="274,51,0,0" VerticalAlignment="Top" Width="120" />
         <Button Content="Calculate" HorizontalAlignment="Left" Margin="411,52,0,0" VerticalAlignment="Top" Width="75" Click="Calculate_Click"/>
         <DataGrid x:Name="TelemetryGrid" HorizontalAlignment="Left" Height="308" Margin="10,102,0,0" VerticalAlignment="Top" Width="772"/>
     </Grid>
