zadanie 3 - commit początkowy

--- a/Konwerter/Konwerter/MainWindow.xaml
+++ b/Konwerter/Konwerter/MainWindow.xaml
@@ -7,7 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
-        <ComboBox x:Name="typeComboBox" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="772" SelectionChanged="TypeComboBox_SelectionChanged"/>
+        <ComboBox x:Name="typeComboBox" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="772" SelectionChanged="TypeComboBox_SelectionChanged">
+        <ComboBox.ItemTemplate>
+            <DataTemplate>
+                <TextBlock Text="{Binding Typ}"/>
+            </DataTemplate>
+        </ComboBox.ItemTemplate>
+        </ComboBox>
         <ComboBox x:Name="fromComboBox" HorizontalAlignment="Left" Margin="135,23,0,0" VerticalAlignment="Top" Width="120"/>
         <ComboBox x:Name="toComboBox" HorizontalAlignment="Left" Margin="421,23,0,0" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="valueTextBox" HorizontalAlignment="Left" Height="23" Margin="10,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
