--- a/Konwerter_jednostek/App.xaml
+++ b/Konwerter_jednostek/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Konwerter_jednostek.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Konwerter_jednostek"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Konwerter_jednostek">
     <Application.Resources>
          
     </Application.Resources>
