--- a/KonwerterApp/KonwerterApp/MainWindow.xaml
+++ b/KonwerterApp/KonwerterApp/MainWindow.xaml
@@ -12,7 +12,13 @@
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
         <TextBlock x:Name="TextBlock_Kategoria" HorizontalAlignment="Left" Margin="17,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Kategoria" Height="22" Width="55"/>
-        <ComboBox x:Name="ComboBox_Kategoria" HorizontalAlignment="Left" Margin="89,10,0,0" VerticalAlignment="Top" Width="139" Height="22" SelectionChanged="ComboBox_Kategoria_SelectionChanged"/>
+        <ComboBox x:Name="ComboBox_Kategoria" HorizontalAlignment="Left" Margin="89,10,0,0" VerticalAlignment="Top" Width="139" Height="22" SelectionChanged="ComboBox_Kategoria_SelectionChanged">
+        <ComboBox.ItemTemplate>
+            <DataTemplate>
+                <TextBlock Text="{Binding Nazwa}"/>
+            </DataTemplate>
+        </ComboBox.ItemTemplate>
+        </ComboBox>
         <TextBlock x:Name="TextBlock_WartoscDoKonwersji" HorizontalAlignment="Left" Margin="17,61,0,0" TextWrapping="Wrap" Text="Wartość do konwersji:" VerticalAlignment="Top" Height="16" Width="116"/>
         <TextBox x:Name="TextBox_WartoscDoKonwersji" HorizontalAlignment="Left" Height="23" Margin="138,61,0,0" TextWrapping="Wrap" Text="Wpisz wartosc" VerticalAlignment="Top" Width="90"/>
         <TextBlock x:Name="TextBlock_Jednostka" HorizontalAlignment="Left" Margin="17,97,0,0" TextWrapping="Wrap" Text="Jednostka:" VerticalAlignment="Top" Height="16" Width="55"/>
