Poprawione wyswietlanie kategorii konwersji

--- a/Konwenter/Konwenter/MainWindow.xaml
+++ b/Konwenter/Konwenter/MainWindow.xaml
@@ -12,7 +12,13 @@
             <RowDefinition Height="0*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <ComboBox x:Name="typKonwersji" HorizontalAlignment="Left" Margin="336,38,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.797,6.721" SelectionChanged="typKonwersji_SelectionChanged"/>
+        <ComboBox x:Name="typKonwersji" HorizontalAlignment="Left" Margin="336,38,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-1.797,6.721" SelectionChanged="typKonwersji_SelectionChanged">
+            <ComboBox.ItemTemplate>
+             <DataTemplate>
+                <TextBlock Text="{Binding nazwaKonwersji}"/>
+             </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
         <ComboBox x:Name="JednostkaWejsc" HorizontalAlignment="Left" Margin="79,91,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="107"/>
         <TextBox x:Name="wartoscWej" HorizontalAlignment="Left" Height="23" Margin="66,135,0,0" Grid.RowSpan="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="Wybierz jednostkę" HorizontalAlignment="Left" Margin="79,60,0,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
