--- a/WPFConverterv2/UnitCoverterPart2/UnitCoverterPart2/App.xaml
+++ b/WPFConverterv2/UnitCoverterPart2/UnitCoverterPart2/App.xaml
@@ -1,10 +1,8 @@
-﻿<Application x:Class="WPFConverterv2.App"
+﻿<Application x:Class="UnitCoverterPart2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPFConverterv2"
-             
-    >
+             xmlns:local="clr-namespace:UnitCoverterPart2">
     <Application.Resources>
-
+         
     </Application.Resources>
 </Application>
