--- a/Unitconverterv2/Unitconverter/MainWindow.xaml
+++ b/Unitconverterv2/Unitconverter/MainWindow.xaml
@@ -12,7 +12,13 @@
         <ComboBox x:Name="OutputcomboBox" HorizontalAlignment="Left" Margin="445,60,0,0" VerticalAlignment="Top" Width="120"/>
         <TextBlock x:Name="OutputtextBlock" HorizontalAlignment="Left" Margin="607,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
         <Button x:Name="CalculateButton" Content="Oblicz" HorizontalAlignment="Left" Margin="83,100,0,0" VerticalAlignment="Top" Width="75" Click="CalculateButton_Click"/>
-        <ComboBox x:Name="ChoosecomboBox" HorizontalAlignment="Left" Margin="85,16,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ChoosecomboBox_SelectionChanged"/>
+        <ComboBox x:Name="ChoosecomboBox" HorizontalAlignment="Left" Margin="85,16,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ChoosecomboBox_SelectionChanged">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
         <DataGrid x:Name="ConverterdataGrid" HorizontalAlignment="Left" Height="100" Margin="85,147,0,0" VerticalAlignment="Top" Width="546"/>
         <Button x:Name="ChangeBaza" Content="Zmien Azure/SQL" HorizontalAlignment="Left" Margin="445,356,0,0" VerticalAlignment="Top" Width="153" Click="ChangeBaza_Click"/>
         <Label x:Name="RodzajBazylabel" Content="Azure/SQL" HorizontalAlignment="Left" Margin="54,358,0,0" VerticalAlignment="Top" Width="224"/>
