--- a/applicationWpf_v2/ConvLogicWeb/Views/Shared/_Layout.cshtml
+++ b/applicationWpf_v2/ConvLogicWeb/Views/Shared/_Layout.cshtml
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
@@ -35,8 +34,12 @@
             <p>&copy; @DateTime.Now.Year - Moja aplikacja ASP.NET</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
+
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
+
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
