--- a/UnitsConverter/UnitsConverter.Web/Views/Home/Index.cshtml
+++ b/UnitsConverter/UnitsConverter.Web/Views/Home/Index.cshtml
@@ -4,7 +4,17 @@
 }
 
 <h1>Units converter</h1>
-@foreach(Units_Converter.Services.IConverter converter in Model)
+@foreach (UnitConverter.Logic.Services.IConverter converter in Model)
 {
-
+    using (Ajax.BeginForm("Convert",
+        new { converterType = converter.GetType().AssemblyQualifiedName },
+        new AjaxOptions() { UpdateTargetId = converter.Name + "result" }))
+    {
+        <div> @converter.Name </div>
+        @Html.DropDownList("unitFrom", new SelectList(converter.Units))
+        @Html.TextBox("valueToConvert")
+        @Html.DropDownList("unitTo", new SelectList(converter.Units))
+        <button type="submit"> Konwertuj </button>
+        <label id="@(converter.Name + "result")"></label>
+    }
 }
