--- a/Konwerter/Konwerter.Web/Views/Home/Index.cshtml
+++ b/Konwerter/Konwerter.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Konwerter.SDK.IKonwerter>
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Konwersja jednostek";
 }
 
 <h1>Konwerter jednostek</h1>
@@ -15,7 +15,7 @@
         @Html.DropDownList("fromType", new SelectList(konwerter.Jednostki))
         @Html.TextBox("value")
         @Html.DropDownList("toType", new SelectList(konwerter.Jednostki))
-        <button type="submit"> Konwertuj </button>
+        <button type = "submit"> Konwertuj </button>
         <label id="@(konwerter.Typ + "wynik")"></label>
     }
 }
