--- a/JIPP2/WpfApp7/MainWindow.xaml
+++ b/JIPP2/WpfApp7/MainWindow.xaml
@@ -7,27 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <ComboBox x:Name="ZCombobox" HorizontalAlignment="Left" Margin="101,100,0,0" VerticalAlignment="Top" Width="120">
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Nazwa}" VerticalAlignment="Center" Margin="5"></TextBlock>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
-        <ComboBox x:Name="NACombobox" HorizontalAlignment="Left" Margin="469,100,0,0" VerticalAlignment="Top" Width="120">
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Nazwa}" VerticalAlignment="Center" Margin="5"></TextBlock>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
+        <ComboBox x:Name="ZCombobox" HorizontalAlignment="Left" Margin="101,100,0,0" VerticalAlignment="Top" Width="120"></ComboBox>
+        <ComboBox x:Name="NACombobox" HorizontalAlignment="Left" Margin="469,100,0,0" VerticalAlignment="Top" Width="120"></ComboBox>
         <TextBox x:Name="ZTextBox" HorizontalAlignment="Left" Height="23" Margin="101,127,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.015,1.797"/>
         <TextBox x:Name="NATextBox" HorizontalAlignment="Left" Height="23" Margin="469,127,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.008,0.089"/>
-        <ComboBox x:Name= "Wybor_typuCombobox"  HorizontalAlignment="Left" Margin="297,45,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.078,0.329" SelectionChanged="TypCombobox_SelectionChanged">
-            <ComboBoxItem Name="Temp">temeratura</ComboBoxItem>
-            <ComboBoxItem Name="masa">masa</ComboBoxItem>
-            <ComboBoxItem Name="dlugosc">dlugosc</ComboBoxItem>
-        </ComboBox>
+        <ComboBox x:Name= "Wybor_typuCombobox"  HorizontalAlignment="Left" Margin="297,45,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.078,0.329" SelectionChanged="TypCombobox_SelectionChanged"></ComboBox>
         <Label Content="Konwertuj z: " HorizontalAlignment="Left" Margin="101,75,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="podaj wartosc" HorizontalAlignment="Left" Margin="101,150,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="Wynik" HorizontalAlignment="Left" Margin="469,150,0,0" VerticalAlignment="Top" Width="120" Height="26"/>
