--- a/UnitConverter/UnitConverter.Web/Views/Home/About.cshtml
+++ b/UnitConverter/UnitConverter.Web/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "O witrynie";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Opis funkcjonalności</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Strona powstała w celu uproszczenia życia. Znajdziecie na niej konwertery najpopularniejszych jednostek miary.</p>
