--- a/UnitConverter/UnitConverter.Web/Views/Home/Contact.cshtml
+++ b/UnitConverter/UnitConverter.Web/Views/Home/Contact.cshtml
@@ -1,17 +1,14 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Kontakt";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Strona kontaktowa</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Rafał Dąbrowski<br />
+    Internet, WWSI<br />
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email:</strong>   <a href="mailto:r.dabrowski@poczta.wwsi.edu.pl">r.dabrowski@poczta.wwsi.edu.pl</a><br />
 </address>
