--- a/UnitConverter/UnitConverter/View/MainWindow.xaml
+++ b/UnitConverter/UnitConverter/View/MainWindow.xaml
@@ -21,13 +21,13 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Content="Rodzaj konwersji" VerticalAlignment="Center"/>
-        <ComboBox Name="cbConversionType" Grid.Row="0" Grid.Column="1" Margin="5,5,5,5" Height="25" SelectedItem="{Binding Mode=OneWayToSource, Path=SelectedUnitConverter}" ItemsSource="{Binding Converter.UnitConverters.Values}"/>
+        <ComboBox Name="cbConversionType" Grid.Row="0" Grid.Column="1" Margin="5,5,5,5" Height="25" SelectedItem="{Binding Mode=OneWayToSource, Path=SelectedUnitConverter}" ItemsSource="{Binding UnitConverters}"/>
         <Label Content="Jednostka początkowa" Grid.Row="1" VerticalAlignment="Center"/>
         <Label Content="Wartość początkowa" Grid.Row="3" VerticalAlignment="Center"/>
         <Label Content="Jednostka końcowa" Grid.Row="2" VerticalAlignment="Center"/>
-        <ComboBox Name="cbUnitFrom" Grid.Row="1" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=BaseUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units.Values}"/>
+        <ComboBox Name="cbUnitFrom" Grid.Row="1" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=SourceUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units}"/>
         <TextBox Grid.Row="3" Grid.Column="1" Height="20" Margin="5,5,5,5" Text="{Binding Mode=OneWayToSource, Path=InputValue}"/>
-        <ComboBox Name="cbUnitTo" Grid.Row="2" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=TargetUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units.Values}"/>
+        <ComboBox Name="cbUnitTo" Grid.Row="2" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=TargetUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units}"/>
         <StackPanel Grid.Column="2" Grid.Row="4" Orientation="Horizontal">
             <Label Content="Wynik" VerticalAlignment="Center"/>
             <TextBlock x:Name="tbResult" Height="20" Margin="5,5,5,5" Text="{Binding Mode=OneWay, Path=Result}"/>
