--- a/UnitConverter/UnitConverter/View/MainWindow.xaml
+++ b/UnitConverter/UnitConverter/View/MainWindow.xaml
@@ -26,7 +26,7 @@
         <Label Content="Wartość początkowa" Grid.Row="3" VerticalAlignment="Center"/>
         <Label Content="Jednostka końcowa" Grid.Row="2" VerticalAlignment="Center"/>
         <ComboBox Name="cbUnitFrom" Grid.Row="1" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=SourceUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units}"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Height="20" Margin="5,5,5,5" Text="{Binding Mode=OneWayToSource, Path=InputValue}"/>
+        <TextBox Grid.Row="3" Grid.Column="1" Height="20" Margin="5,5,5,5" Text="{Binding Mode=OneWayToSource, Path=InputValue, UpdateSourceTrigger=PropertyChanged}"/>
         <ComboBox Name="cbUnitTo" Grid.Row="2" Grid.Column="1" Height="25" Margin="5,5,5,5" SelectedItem="{Binding Mode=OneWayToSource, Path=TargetUnit}" DataContext="{Binding ElementName=cbConversionType, Path=SelectedItem}" ItemsSource="{Binding Units}"/>
         <StackPanel Grid.Column="2" Grid.Row="4" Orientation="Horizontal">
             <Label Content="Wynik" VerticalAlignment="Center"/>
