--- a/Konwerter/Konwerter/MainWindow.xaml
+++ b/Konwerter/Konwerter/MainWindow.xaml
@@ -15,13 +15,14 @@
         </ComboBox.ItemTemplate>
         </ComboBox>
         <ComboBox x:Name="fromComboBox" HorizontalAlignment="Left" Margin="135,23,0,0" VerticalAlignment="Top" Width="120"/>
-        <ComboBox x:Name="toComboBox" HorizontalAlignment="Left" Margin="421,23,0,0" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="toComboBox" HorizontalAlignment="Left" Margin="353,23,0,0" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="valueTextBox" HorizontalAlignment="Left" Height="23" Margin="10,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBlock x:Name="resultTextBox" HorizontalAlignment="Left" Margin="468,28,0,0" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="1.585,0.695"/>
-        <Button Content="Przelicz" HorizontalAlignment="Left" Margin="546,23,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.105,-0.182" Click="Button_Click"/>
-        <Label x:Name="resultLabel" Content="=" HorizontalAlignment="Left" Margin="255,22,0,0" VerticalAlignment="Top" Width="161"/>
+        <Button x:Name="przeliczButton" Content="Przelicz" HorizontalAlignment="Left" Margin="478,24,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.493,0.5" Click="PrzeliczButton_Click"/>
+        <Label x:Name="resultLabel" Content="=" HorizontalAlignment="Left" Margin="255,22,0,0" VerticalAlignment="Top" Width="93"/>
         <DataGrid x:Name="statisticDataGrid" HorizontalAlignment="Left" Height="359" Margin="10,50,0,0" VerticalAlignment="Top" Width="772"/>
-        <ComboBox x:Name="repositoryComboBox" HorizontalAlignment="Left" Margin="662,23,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="RepositoryComboBox_SelectionChanged"/>
+        <ComboBox x:Name="repositoryComboBox" HorizontalAlignment="Left" Margin="616,23,0,0" VerticalAlignment="Top" Width="61" SelectionChanged="RepositoryComboBox_SelectionChanged"/>
+        <Button x:Name="wyczyscButton" Content="Wyczyść historię" HorizontalAlignment="Left" Margin="682,23,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.49,0.45" Click="WyczyscButton_Click"/>
 
     </Grid>
 </Window>
